Refactored for react UI